[gd_scene load_steps=7 format=2]

[ext_resource path="res://png/hard_enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://enemy_shader.tres" type="Material" id=3]
[ext_resource path="res://DeathParticles.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=3]
radius = 22.2878
height = 0.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 27.0976
height = 2.52376

[node name="HardEnemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 3 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 32 )
shape = SubResource( 3 )

[node name="HPBar" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HPBar"]
margin_top = 64.0
margin_right = 64.0
margin_bottom = 69.0
color = Color( 0.0705882, 0.694118, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DamageTween" type="Tween" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 31.748, 32.9386 )
shape = SubResource( 4 )

[node name="AnimationTween" type="Tween" parent="."]

[node name="DeathParticles" parent="." instance=ExtResource( 4 )]

[node name="DeathTimer" type="Timer" parent="."]
[connection signal="timeout" from="DamageTimer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
